--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     </li>
     <li>1 tbsp of butter</li>
   </ul>
+  
+  <ol>
+    <li>Spread butter</li>
+    <li>Fry bread</li>
+    <li>Add cheese</li>
+    <li>Cover with second slice of bread</li>
+    <li>Turn over and fry for 2 minutes</li>
+  </ol>
 
 
 </body>
