--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   </ul>
   
   <ol>
-    <li>Spread butter</li>
-    <li>Fry bread</li>
-    <li>Add cheese</li>
+    <li>Spread butter on bread and frying pan</li>
+    <li>Place bread in frying pan and fry</li>
+    <li>Add cheese on top of bread</li>
     <li>Cover with second slice of bread</li>
     <li>Turn over and fry for 2 minutes</li>
   </ol>
